2010-03-12  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* DeepMQ::SV#pushのmethod_specを再変更
	* DeepSpace#import_mq: 待つオプションを追加
	
	* DeepSpace#set_root, root, register_root_from_other_session,
	  delete_roots, import_reference, import_reference_for_disable_gc,
	  register_import_reference,
	  register_import_reference_for_disable_gc,
	  deregister_import_reference_id, deregister_import_reference_proc: 
	  分散GCでリファレンスカウント方式への変更に伴う対応
	* DeepSpace#init_import_feature, import_reference,
	  register_import_reference, deregister_import_reference_id,
	  deregister_import_reference_proc, start_deregister_reference: GCと
	  の排他制御の対応に伴う変更
	* Reply#selialize,IteratorCallBackReply#selialize: 無用なset_root
	  が分散GCを妨げていた.
	* Organizer#id2obj: リファレンス先がないときIllegalObjectを返すよ
	  うにしたことによる対応.
	* organizer@@ABSOLUTE_IMMUTABLE_CLASSES: immutableなクラスを追加
	* Reference#asynchronus_send: asynchronus_send_with_callbackの
	  aliasにした

2010-03-09  Keiju Ishitsuka  <keiju@giant>

	* DeepMQ::SV#pushのmethod_specを変更

2010-03-04  Keiju Ishitsuka  <keiju@giant>

	* Makefile: pull-from-emperor追加
	
	* deep-connect.rb, organizer.rb, deep-space.rb, session.rb,
	  evaluator.rb, event.rb: DeepMQ追加

2010-02-26  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Makefile: pull-from-fairy追加

	* reference.rb: Reference#method_missing: NoMethodErrorの扱いを変えた.

2010-02-25  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* deep-fork.rb: DeepFork#initialize ちょっとバグがあった

	* organizer.rb: Organizer#serviceバグがあった.

	* organizer.rb, deep-space.rb, session.rb: DeepSpace#importにwait
	 フラグ追加

2010-02-25  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* deep-fork.rb: DeepFork追加

2010-02-24  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* AsyncronusRequest, AsyncronusReply: 非同期メッセージ呼び出し追加
	* Reference#asynchronus_send_with_callback,
	  Session#asyncronus_send_to: callback付き非同期呼び出し追加
	* Request#result, Request#create_exception: 例外生成を統合
	* Referrence#method_missing: NoMethodErrorの振る舞い変更(to_ary問題)
	* Request#create_exception: 例外の扱いを変更(こっちにもそのクラス